Update Jupyter notebook for RAG with Pinecone to use new tax document and reset execution count; add Streamlit chat application for income tax queries.

--- a/3_rag_with_pinecone.ipynb
+++ b/3_rag_with_pinecone.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "70249889",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
     "\n",
     "text_splitter = RecursiveCharacterTextSplitter(chunk_size=1500, chunk_overlap=200)\n",
     "\n",
-    "loader = Docx2txtLoader(\"./tax.docx\")\n",
+    "loader = Docx2txtLoader(\"./tax_with_markdown.docx\")\n",
     "docs = loader.load_and_split(text_splitter)"
    ]
   },
