Refactor Jupyter notebook execution counts and enhance chat application with AI message retrieval for income tax queries using Pinecone and Langchain.

--- a/3_rag_with_pinecone.ipynb
+++ b/3_rag_with_pinecone.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "70249889",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "9a007863",
    "metadata": {},
    "outputs": [],
@@ -68,10 +68,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "b6201ba5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kdh/Documents/workspace/LLM/llm-app/venv/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from pinecone import Pinecone\n",
@@ -90,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "04f5bb28",
    "metadata": {},
    "outputs": [],
@@ -102,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "ffe7e7f4",
    "metadata": {},
    "outputs": [],
@@ -141,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "3284fbc4",
    "metadata": {},
    "outputs": [],
@@ -175,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "d5463427",
    "metadata": {},
    "outputs": [],
@@ -196,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "9fea9a4a",
    "metadata": {},
    "outputs": [],
@@ -206,17 +215,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "0adc84ed",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'정확한 소득세는 근로소득공제·인적공제·세액공제(자녀·보험료·의료비 등)에 따라 달라져 단정할 수 없습니다. 다만 공제 없이 과세표준이 연 50,000,000원이라고 가정하면 세율표에 따라 산출세액은 6,240,000원(624만원)입니다. 실제 납부세액을 원하시면 배우자·부양가족 수, 연금·보험료, 신용카드·기부금 등 공제 항목을 알려주세요.'"
+       "'주어진 자료만으로는 정확한 소득세를 알 수 없습니다. 근로소득공제·인적공제·4대보험·연말정산 항목 등으로 과세표준이 달라지고, 소득세는 누진세율을 과세표준에 따라 적용하기 때문에 과세표준 정보가 필요합니다. 원하시면 연봉 5천만원에서 국민연금·건강보험 등 공제액과 부양가족 수 등을 알려주시면 대략의 세액을 계산해 드리겠습니다.'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
